force-app/main/default/objects/VerdeAmancoSolicitation__c/VerdeAmancoSolicitation__c.object-meta.xml
<CustomObject>
    <description>[a12][VerdeAmancoSolicitation__c]</description>
    <label>Solicitação Verde Amanco</label>
    <nameField>
        <label>Nome da Solicitação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitações Verde Amanco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>