force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/AccountFml__c.field-meta.xml
<CustomField>
    <fullName>AccountFml__c</fullName>
    <formula>SalesAreaLkp__r.AccountLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>