force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/AddressTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>AddressTypeTxt__c</fullName>
    <label>Tipo do Endereço</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endereço do Cliente</fullName>
            </value>
            <value>
                <fullName>Endereço do Solicitante</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>