force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/ApprovedFewerPhotosTxt__c.field-meta.xml
<CustomField>
    <fullName>ApprovedFewerPhotosTxt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado com menos fotos</label>
    <type>Checkbox</type>
</CustomField>