force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/CampaignTxt__c.field-meta.xml
<CustomField>
    <fullName>CampaignTxt__c</fullName>
    <label>Campanha</label>
    <length>25</length>
    <type>Text</type>
</CustomField>