force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/ChannelFml__c.field-meta.xml
<CustomField>
    <fullName>ChannelFml__c</fullName>
    <formula>TEXT(SalesAreaLkp__r.ChannelPVCTxt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>