force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/CityTxt__c.field-meta.xml
<CustomField>
    <fullName>CityTxt__c</fullName>
    <label>Cidade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>