force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/CNPJFml__c.field-meta.xml
<CustomField>
    <fullName>CNPJFml__c</fullName>
    <formula>SalesAreaLkp__r.AccountLkp__r.CNPJTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>