force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Observação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>