force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/DeliveryDateDte__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateDte__c</fullName>
    <label>Data de Entrega</label>
    <type>Date</type>
</CustomField>