force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/DeliveryForecastDte__c.field-meta.xml
<CustomField>
    <fullName>DeliveryForecastDte__c</fullName>
    <label>Previsão de Entrega</label>
    <type>Date</type>
</CustomField>