force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/DispatchDateDte__c.field-meta.xml
<CustomField>
    <fullName>DispatchDateDte__c</fullName>
    <label>Data de Despacho</label>
    <type>Date</type>
</CustomField>