force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/HasItemsBln__c.field-meta.xml
<CustomField>
    <fullName>HasItemsBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Itens?</label>
    <type>Checkbox</type>
</CustomField>