force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/InvoiceTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTxt__c</fullName>
    <label>Nota Fiscal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>