force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/IssueDateDte__c.field-meta.xml
<CustomField>
    <fullName>IssueDateDte__c</fullName>
    <label>Data de Emissão</label>
    <type>Date</type>
</CustomField>