force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/OccurrenceTxt__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceTxt__c</fullName>
    <label>Ocorrência</label>
    <length>25</length>
    <type>Text</type>
</CustomField>