force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/OSTxt__c.field-meta.xml
<CustomField>
    <fullName>OSTxt__c</fullName>
    <label>OS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>