force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/PerformanceTxt__c.field-meta.xml
<CustomField>
    <fullName>PerformanceTxt__c</fullName>
    <label>Performance</label>
    <length>25</length>
    <type>Text</type>
</CustomField>