force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/PointTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>PointTypeTxt__c</fullName>
    <label>Tipo de Ponto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ponto Normal</fullName>
            </value>
            <value>
                <fullName>Ponto Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>