force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/R3Txt__c.field-meta.xml
<CustomField>
    <fullName>R3Txt__c</fullName>
    <description>Campo Código do cliente.</description>
    <label>R3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>