force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/ReceiverTxt__c.field-meta.xml
<CustomField>
    <fullName>ReceiverTxt__c</fullName>
    <label>Destinatário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>