force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/RegionalTxt__c.field-meta.xml
<CustomField>
    <fullName>RegionalTxt__c</fullName>
    <label>Regional</label>
    <length>80</length>
    <type>Text</type>
</CustomField>