force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/RequesterNameTxt__c.field-meta.xml
<CustomField>
    <fullName>RequesterNameTxt__c</fullName>
    <label>Nome Requisitante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>