force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/SalesAreaLkp__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaLkp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Área de vendas</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Solicitações Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoSolicitations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>