force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/SFCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SFCodeTxt__c</fullName>
    <label>Código SF</label>
    <length>80</length>
    <type>Text</type>
</CustomField>