force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/ShippingAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressTxt__c</fullName>
    <label>Endereço de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>