force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/StateTxt__c.field-meta.xml
<CustomField>
    <fullName>StateTxt__c</fullName>
    <label>Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>