force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Em preenchimento</fullName>
                <default>true</default>
                <label>Em preenchimento</label>
            </value>
            <value>
                <fullName>Enviando para o operador logístico</fullName>
            </value>
            <value>
                <fullName>Recebido pelo operador logístico</fullName>
            </value>
            <value>
                <fullName>Material entregue no endereço solicitado</fullName>
            </value>
            <value>
                <fullName>Fotos aguardando aprovação</fullName>
            </value>
            <value>
                <fullName>Fotos não aprovadas</fullName>
            </value>
            <value>
                <fullName>Fotos aprovadas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>