force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/VerdeAmancoKitLkp__c.field-meta.xml
<CustomField>
    <fullName>VerdeAmancoKitLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Verde Amanco</label>
    <referenceTo>VerdeAmancoKit__c</referenceTo>
    <relationshipLabel>Solicitações Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoSolicitations</relationshipName>
    <type>Lookup</type>
</CustomField>