force-app/main/default/objects/VerdeAmancoSolicitation__c/fields/VerdeAmancoKitNameFml__c.field-meta.xml
<CustomField>
    <fullName>VerdeAmancoKitNameFml__c</fullName>
    <formula>VerdeAmancoKitLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Kit Verde Amanco</label>
    <type>Text</type>
</CustomField>