force-app/main/default/objects/VerdeAmancoSolicitation__c/validationRules/ForbbidenStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ForbbidenStatus</fullName>
    <active>true</active>
    <description>Impede o vendedor de alterar o status da solicitação para os seguintes valores: &quot;Aguardando aprovação&quot;, &quot;Rejeitado&quot;, &quot;Aprovado&quot;.</description>
    <errorConditionFormula>OR(ISPICKVAL( PRIORVALUE(StatusTxt__c) , &quot;Em preenchimento&quot;),ISPICKVAL( PRIORVALUE(StatusTxt__c) , &quot;&quot;),ISPICKVAL( PRIORVALUE(StatusTxt__c) , &quot;Fotos não aprovadas&quot;),ISPICKVAL( PRIORVALUE(StatusTxt__c) , &quot;Fotos aguardando aprovação&quot;)) &amp;&amp; NOT(ISPICKVAL(StatusTxt__c, &quot;Enviando para o operador logístico&quot;)) &amp;&amp; OR(ISPICKVAL(StatusTxt__c, &quot;Fotos aprovadas&quot;),ISPICKVAL(StatusTxt__c, &quot;Fotos aguardando aprovação&quot;),ISPICKVAL(StatusTxt__c, &quot;Fotos não aprovadas&quot;),ISPICKVAL(StatusTxt__c, &quot;Recebido pelo operador logístico&quot;),ISPICKVAL(StatusTxt__c, &quot;Material entregue no endereço solicitado&quot;)) &amp;&amp; OR($Profile.Name=&apos;Vendedor&apos;,$Profile.Name=&apos;Representante&apos;,$Profile.Name=&apos;Representante Partner&apos;)</errorConditionFormula>
    <errorDisplayField>StatusTxt__c</errorDisplayField>
    <errorMessage>Não é possível alterar o status para esse valor.</errorMessage>
</ValidationRule>