force-app/main/default/objects/VerdeAmancoSolicitation__c/validationRules/StatusBlock2.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusBlock2</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(StatusTxt__c),&quot;Material entregue no endereço solicitado&quot;) &amp;&amp;    OR($Profile.Name=&apos;Vendedor&apos;,$Profile.Name=&apos;Representante&apos;,$Profile.Name=&apos;Representante Partner&apos;) &amp;&amp;  NOT( ISPICKVAL(StatusTxt__c, &quot;Fotos aguardando aprovação&quot;) )</errorConditionFormula>
    <errorMessage>Não é possível editar  a solicitação. Só é possível adicionar fotos ou enviar para aprovação.</errorMessage>
</ValidationRule>