force-app/main/default/objects/VerdeAmancoSolicitation__c/validationRules/StatusBlock3.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusBlock3</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StatusTxt__c,&quot;Enviando para o operador logístico&quot;) &amp;&amp; 
HasItemsBln__c == false &amp;&amp; OR($Profile.Name=&apos;Vendedor&apos;,$Profile.Name=&apos;Representante&apos;,$Profile.Name=&apos;Representante Partner&apos;)</errorConditionFormula>
    <errorMessage>É necessário adicionar pelo menos um item à solicitação para que seja possível alterar seu status.</errorMessage>
</ValidationRule>