force-app/main/default/objects/VerdeAmancoSolicitation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CNPJFml__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>StatusTxt__c</columns>
    <columns>VerdeAmancoKitLkp__c</columns>
    <columns>DeliveryDateDte__c</columns>
    <columns>DispatchDateDte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>